--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -3,20 +3,44 @@
 {% block title %} Liste des recettes {% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('css/header.css') }}" />
 	<link rel="stylesheet" href="{{ asset('css/recipes.css') }}" />
 {% endblock %}
 
 {% block body %}
 	<div class="container-fluid p-0">
-		<header>
-        	<div>
-				<nav class="bg-dark row m-0">
-					<a class="col-2" href="#">
-						<img src="images/re7-logo.png" alt="logo" />
-					</a>
-					<div class="col-7 align-items-center desktopNav">
-						{# Desktop nav #}
-						<ul class="d-flex justify-content-between w-100">
+		<header class="bg-dark">
+			<nav class="row m-0">
+				<a class="col-2" href="#">
+					<img src="images/re7-logo.png" alt="logo" />
+				</a>
+				<div class="col-7 align-items-center desktopNav">
+					{# Desktop nav #}
+					<ul class="d-flex justify-content-between w-100">
+						<li>
+							<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
+						</li>
+						<li>
+							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
+						</li>
+						<li>
+							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+						</li>
+						<li>
+							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col justify-content-end align-items-center burgerCol">
+					<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list text-warning" id="burgerBtn" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+					</svg>
+					<div id="mobileNav" class="bg-dark">
+						<div class="d-flex justify-content-end px-2">
+							<span id="closeBtn" class="text-warning fs-1 fw-bold">X</span>
+						</div>
+						<ul class="d-flex flex-column align-items-center justify-content-between mobileUl">
+							{# Mobile nav #}
 							<li>
 								<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
 							</li>
@@ -31,34 +55,22 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col justify-content-end align-items-center burgerCol">
-						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list text-warning burgerBtn" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-						</svg>
-						<div class="mobileNav bg-dark">
-							<div class="d-flex justify-content-end px-2">
-								<span class="closeBtn text-warning fs-1 fw-bold">X</span>
-							</div>
-							<ul class="d-flex flex-column align-items-center justify-content-between mobileUl">
-								{# Mobile nav #}
-								<li>
-									<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
-								</li>
-								<li>
-									<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
-								</li>
-								<li>
-									<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
-								</li>
-								<li>
-									<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-        	</div>
+				</div>
+			</nav>
 		</header>
+		<main>
+			<section class="row">
+				{% for recipe in recipes %}
+					<div class="recipeContainer d-flex justify-content-between">
+						{{ recipe.name }}
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
+							<path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
+						</svg>
+					</div>
+				{% endfor %}
+			</section>
+
+		</main>
 
 	</div>
 {% endblock %}
