--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -1,46 +1,19 @@
-header {
-	height: 80px;
+main {
+	height: calc(100vh - 80px);
+	background-color: #212528;
+	color: white;
 }
 
-.mobileNav {
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
+.recipeContainer {
+	margin: auto;
 }
 
-.mobileUl {
-	margin-top: 30vh;
-	height: 30vh;
+.recipeNameCol {
+	overflow-x: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
-.burgerBtn,
-.closeBtn {
-	cursor: pointer;
-}
-
-/* Mobiles mode */
-@media screen and (max-width: 1000px) {
-	.desktopNav {
-		display: none;
-	}
-	.burgerCol {
-		display: flex;
-	}
-	.mobileNav {
-		display: none;
-	}
-}
-
-/* Desktop mode */
-@media screen and (min-width: 1000px) {
-	.desktopNav {
-		display: flex;
-	}
-	.burgerCol {
-		display: none;
-	}
+#addToPlanningSection {
+	display: none;
 }
