--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -59,7 +59,7 @@
 			</nav>
 		</header>
 		<main>
-			<h1 class="text-center">Créer une recette</h1>
+			<h1 class="text-center text-white fs-2">Créer une recette</h1>
 			{{ form_start(form) }}
 
 			{{ form_label(form.name, 'Nom') }}
@@ -77,8 +77,9 @@
 			{{ form_label(form.persons, 'Pour') }}
 			{{ form_widget(form.persons) }}
 			{{ form_errors(form.persons) }}
-			
-			<div id="foodInputsContainer" class="row mt-2">
+
+			<p class="text-center text-white mt-3">Aliments</p>	
+			<div id="foodInputsContainer" class="row">
 
 				<div class="col-4 d-flex flex-column align-items-center" id="foodCol">
 					<span>Aliment</span>
