--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -5,9 +5,8 @@
     {{ parent() }}
 {% endblock %}
 
-{% block body %}
+{% block body %}{% endblock %}
 
-{% endblock %}
 {% block javascripts %}
     {{ parent() }}
 {% endblock %}
