--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,9 @@
 
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container-fluid p-0">
+            {% block body %}{% endblock %}
+        </div>
         {% block javascripts %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         {% endblock %}
