--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -8,20 +8,43 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container-fluid p-0">
-		<header class="bg-dark">
-			<nav class="row m-0">
-				<a class="col-2" href="#">
-					<img src="images/re7-logo.png" alt="logo" />
-				</a>
-				<div class="col-7 align-items-center desktopNav">
-					{# Desktop nav #}
-					<ul class="d-flex justify-content-between w-100">
+	<header class="bg-dark">
+		<nav class="row m-0">
+			<a class="col-2" href="{{ path('home') }}">
+				<img src="images/re7-logo.png" alt="logo" />
+			</a>
+			<div class="col-7 align-items-center desktopNav">
+				{# Desktop nav #}
+				<ul class="d-flex justify-content-between w-100">
+					<li>
+						<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
+					</li>
+					<li>
+						<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
+					</li>
+					<li>
+						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+					</li>
+					<li>
+						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col justify-content-end align-items-center burgerCol">
+				<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list text-warning" id="burgerBtn" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+				</svg>
+				<div id="mobileNav" class="bg-dark">
+					<div class="d-flex justify-content-end px-2">
+						<span id="closeBtn" class="text-warning fs-1 fw-bold">X</span>
+					</div>
+					<ul class="d-flex flex-column align-items-center justify-content-between mobileUl">
+						{# Mobile nav #}
 						<li>
 							<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
 						</li>
 						<li>
-							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
+							<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
 						</li>
 						<li>
 							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
@@ -31,78 +54,53 @@
 						</li>
 					</ul>
 				</div>
-				<div class="col justify-content-end align-items-center burgerCol">
-					<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-list text-warning" id="burgerBtn" viewBox="0 0 16 16">
-						<path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-					</svg>
-					<div id="mobileNav" class="bg-dark">
-						<div class="d-flex justify-content-end px-2">
-							<span id="closeBtn" class="text-warning fs-1 fw-bold">X</span>
-						</div>
-						<ul class="d-flex flex-column align-items-center justify-content-between mobileUl">
-							{# Mobile nav #}
-							<li>
-								<a href="#" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
-							</li>
-							<li>
-								<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
-							</li>
-							<li>
-								<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
-							</li>
-							<li>
-								<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
-							</li>
-						</ul>
+			</div>
+		</nav>
+	</header>
+	<main>
+		<section class="row recipesSection">
+			{% for recipe in recipes %}
+				<div class="recipeContainer row fs-3 mb-2">
+					<div class="col-10 recipeNameCol">{{ recipe.name }}</div>
+					<div class="col-2">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" id="{{ recipe.id }}" onclick="addToPlanning('{{ recipe.name }}')" class="bi bi-cart-plus-fill text-warning addToPlanningBtn" viewBox="0 0 16 16">
+							<path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
+						</svg>
 					</div>
 				</div>
-			</nav>
-		</header>
-		<main>
-			<section class="row">
-				{% for recipe in recipes %}
-					<div class="recipeContainer row fs-3 mb-2">
-						<div class="col-10 recipeNameCol">{{ recipe.name }}</div>
-						<div class="col-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" id="{{ recipe.id }}" onclick="addToPlanning('{{ recipe.name }}')" class="bi bi-cart-plus-fill text-warning addToPlanningBtn" viewBox="0 0 16 16">
-								<path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
-							</svg>
-						</div>
-					</div>
-				{% endfor %}
-				<a href="{{ path('add_recipe') }}" class="text-center">
-					<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-plus-circle-dotted text-warning" viewBox="0 0 16 16">
-						<path d="M8 0c-.176 0-.35.006-.523.017l.064.998a7.117 7.117 0 0 1 .918 0l.064-.998A8.113 8.113 0 0 0 8 0zM6.44.152c-.346.069-.684.16-1.012.27l.321.948c.287-.098.582-.177.884-.237L6.44.153zm4.132.271a7.946 7.946 0 0 0-1.011-.27l-.194.98c.302.06.597.14.884.237l.321-.947zm1.873.925a8 8 0 0 0-.906-.524l-.443.896c.275.136.54.29.793.459l.556-.831zM4.46.824c-.314.155-.616.33-.905.524l.556.83a7.07 7.07 0 0 1 .793-.458L4.46.824zM2.725 1.985c-.262.23-.51.478-.74.74l.752.66c.202-.23.418-.446.648-.648l-.66-.752zm11.29.74a8.058 8.058 0 0 0-.74-.74l-.66.752c.23.202.447.418.648.648l.752-.66zm1.161 1.735a7.98 7.98 0 0 0-.524-.905l-.83.556c.169.253.322.518.458.793l.896-.443zM1.348 3.555c-.194.289-.37.591-.524.906l.896.443c.136-.275.29-.54.459-.793l-.831-.556zM.423 5.428a7.945 7.945 0 0 0-.27 1.011l.98.194c.06-.302.14-.597.237-.884l-.947-.321zM15.848 6.44a7.943 7.943 0 0 0-.27-1.012l-.948.321c.098.287.177.582.237.884l.98-.194zM.017 7.477a8.113 8.113 0 0 0 0 1.046l.998-.064a7.117 7.117 0 0 1 0-.918l-.998-.064zM16 8a8.1 8.1 0 0 0-.017-.523l-.998.064a7.11 7.11 0 0 1 0 .918l.998.064A8.1 8.1 0 0 0 16 8zM.152 9.56c.069.346.16.684.27 1.012l.948-.321a6.944 6.944 0 0 1-.237-.884l-.98.194zm15.425 1.012c.112-.328.202-.666.27-1.011l-.98-.194c-.06.302-.14.597-.237.884l.947.321zM.824 11.54a8 8 0 0 0 .524.905l.83-.556a6.999 6.999 0 0 1-.458-.793l-.896.443zm13.828.905c.194-.289.37-.591.524-.906l-.896-.443c-.136.275-.29.54-.459.793l.831.556zm-12.667.83c.23.262.478.51.74.74l.66-.752a7.047 7.047 0 0 1-.648-.648l-.752.66zm11.29.74c.262-.23.51-.478.74-.74l-.752-.66c-.201.23-.418.447-.648.648l.66.752zm-1.735 1.161c.314-.155.616-.33.905-.524l-.556-.83a7.07 7.07 0 0 1-.793.458l.443.896zm-7.985-.524c.289.194.591.37.906.524l.443-.896a6.998 6.998 0 0 1-.793-.459l-.556.831zm1.873.925c.328.112.666.202 1.011.27l.194-.98a6.953 6.953 0 0 1-.884-.237l-.321.947zm4.132.271a7.944 7.944 0 0 0 1.012-.27l-.321-.948a6.954 6.954 0 0 1-.884.237l.194.98zm-2.083.135a8.1 8.1 0 0 0 1.046 0l-.064-.998a7.11 7.11 0 0 1-.918 0l-.064.998zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-					</svg>
-				</a>
-			</section>
+			{% endfor %}
+		</section>
+		<p class="text-center">		
+			<a href="{{ path('add_recipe') }}">
+				<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-plus-circle-dotted text-warning" viewBox="0 0 16 16">
+					<path d="M8 0c-.176 0-.35.006-.523.017l.064.998a7.117 7.117 0 0 1 .918 0l.064-.998A8.113 8.113 0 0 0 8 0zM6.44.152c-.346.069-.684.16-1.012.27l.321.948c.287-.098.582-.177.884-.237L6.44.153zm4.132.271a7.946 7.946 0 0 0-1.011-.27l-.194.98c.302.06.597.14.884.237l.321-.947zm1.873.925a8 8 0 0 0-.906-.524l-.443.896c.275.136.54.29.793.459l.556-.831zM4.46.824c-.314.155-.616.33-.905.524l.556.83a7.07 7.07 0 0 1 .793-.458L4.46.824zM2.725 1.985c-.262.23-.51.478-.74.74l.752.66c.202-.23.418-.446.648-.648l-.66-.752zm11.29.74a8.058 8.058 0 0 0-.74-.74l-.66.752c.23.202.447.418.648.648l.752-.66zm1.161 1.735a7.98 7.98 0 0 0-.524-.905l-.83.556c.169.253.322.518.458.793l.896-.443zM1.348 3.555c-.194.289-.37.591-.524.906l.896.443c.136-.275.29-.54.459-.793l-.831-.556zM.423 5.428a7.945 7.945 0 0 0-.27 1.011l.98.194c.06-.302.14-.597.237-.884l-.947-.321zM15.848 6.44a7.943 7.943 0 0 0-.27-1.012l-.948.321c.098.287.177.582.237.884l.98-.194zM.017 7.477a8.113 8.113 0 0 0 0 1.046l.998-.064a7.117 7.117 0 0 1 0-.918l-.998-.064zM16 8a8.1 8.1 0 0 0-.017-.523l-.998.064a7.11 7.11 0 0 1 0 .918l.998.064A8.1 8.1 0 0 0 16 8zM.152 9.56c.069.346.16.684.27 1.012l.948-.321a6.944 6.944 0 0 1-.237-.884l-.98.194zm15.425 1.012c.112-.328.202-.666.27-1.011l-.98-.194c-.06.302-.14.597-.237.884l.947.321zM.824 11.54a8 8 0 0 0 .524.905l.83-.556a6.999 6.999 0 0 1-.458-.793l-.896.443zm13.828.905c.194-.289.37-.591.524-.906l-.896-.443c-.136.275-.29.54-.459.793l.831.556zm-12.667.83c.23.262.478.51.74.74l.66-.752a7.047 7.047 0 0 1-.648-.648l-.752.66zm11.29.74c.262-.23.51-.478.74-.74l-.752-.66c-.201.23-.418.447-.648.648l.66.752zm-1.735 1.161c.314-.155.616-.33.905-.524l-.556-.83a7.07 7.07 0 0 1-.793.458l.443.896zm-7.985-.524c.289.194.591.37.906.524l.443-.896a6.998 6.998 0 0 1-.793-.459l-.556.831zm1.873.925c.328.112.666.202 1.011.27l.194-.98a6.953 6.953 0 0 1-.884-.237l-.321.947zm4.132.271a7.944 7.944 0 0 0 1.012-.27l-.321-.948a6.954 6.954 0 0 1-.884.237l.194.98zm-2.083.135a8.1 8.1 0 0 0 1.046 0l-.064-.998a7.11 7.11 0 0 1-.918 0l-.064.998zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+				</svg>
+			</a>
+		</p>
 
-			<section id="addToPlanningSection">
-				<form class="mt-2 mx-auto" method="post">
-					<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="mt-5"></input></p>
-					<div class="d-flex justify-content-around align-items-center">
-						Prévu pour
-						<select id="day" name="day" required>
-							<option value="Lundi">Lundi</option>
-							<option value="Mardi">Mardi</option>
-							<option value="Mercredi">Mercredi</option>
-							<option value="Jeudi">Jeudi</option>
-							<option value="Vendredi">Vendredi</option>
-							<option value="Samedi">Samedi</option>
-							<option value="Dimanche">Dimanche</option>
-						</select>
-						<select id="when" name="when" required>
-							<option value="midi">Midi</option>
-							<option value="soir">Soir</option>
-						</select>
-						<button type="submit" class="btn btn-sm btn-outline-warning">Ok</button>
-					</div>
-				</form>
-			</section>
-
-		</main>
-
-	</div>
+		<section id="addToPlanningSection">
+			<form class="mt-2 mx-auto" method="post">
+				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="mt-5"></input></p>
+				<div class="d-flex justify-content-around align-items-center">
+					Prévu pour
+					<select id="day" name="day" required>
+						<option value="Lundi">Lundi</option>
+						<option value="Mardi">Mardi</option>
+						<option value="Mercredi">Mercredi</option>
+						<option value="Jeudi">Jeudi</option>
+						<option value="Vendredi">Vendredi</option>
+						<option value="Samedi">Samedi</option>
+						<option value="Dimanche">Dimanche</option>
+					</select>
+					<select id="when" name="when" required>
+						<option value="midi">Midi</option>
+						<option value="soir">Soir</option>
+					</select>
+					<button type="submit" class="btn btn-sm btn-outline-warning">Ok</button>
+				</div>
+			</form>
+		</section>
+	</main>
 {% endblock %}
 
 {% block javascripts %}
