Add shopping page

--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -23,7 +23,7 @@
 						<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
 					</li>
 					<li>
-						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+						<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 					</li>
 					<li>
 						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
@@ -47,7 +47,7 @@
 							<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
 						</li>
 						<li>
-							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+							<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 						</li>
 						<li>
 							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
