--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -20,10 +20,10 @@
 						<a href="{{ path('home') }}" class="text-decoration-none text-white fs-4 fw-bold">Recettes</a>
 					</li>
 					<li>
-						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
+						<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
 					</li>
 					<li>
-						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+						<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 					</li>
 					<li>
 						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
@@ -47,7 +47,7 @@
 							<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
 						</li>
 						<li>
-							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
+							<a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 						</li>
 						<li>
 							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
@@ -61,7 +61,7 @@
 		<h1 class="text-center text-white fs-2">Créer une recette</h1>
 
 		{% for message in app.flashes('success') %}
-			<div class="alert alert-success bg-dark border-0 text-center text-success" role="alert">
+			<div id="alertContainer" class="alert alert-success bg-dark border-0 text-center text-success" role="alert">
 				{{ message }}
 			</div>
 		{% endfor %}
