--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -26,7 +26,7 @@
 						<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 					</li>
 					<li>
-						<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+						<a href="{{ path('foods') }}" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
 					</li>
 				</ul>
 			</div>
@@ -50,7 +50,7 @@
 							<a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
 						</li>
 						<li>
-							<a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+							<a href="{{ path('foods') }}" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
 						</li>
 					</ul>
 				</div>
