--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste de courses{% endblock %}
+{% block title %}Aliments{% endblock %}
 {% block stylesheets %}
 	{{ parent() }}
 	<link rel="stylesheet" href="{{ asset('css/header.css') }}" />
-	<link rel="stylesheet" href="{{ asset('css/shopping.css') }}" />
+	<link rel="stylesheet" href="{{ asset('css/foods.css') }}" />
 {% endblock %}
 
 {% block body %}
@@ -23,10 +23,10 @@
                         <a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
                     </li>
                     <li>
-                        <a href="#" class="text-decoration-none text-white fs-4 fw-bold">Liste de courses</a>
+                        <a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
                     </li>
                     <li>
-                        <a href="{{ path('foods') }}" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+                        <a href="#" class="text-decoration-none text-white fs-4 fw-bold">Aliments</a>
                     </li>
                 </ul>
             </div>
@@ -47,10 +47,10 @@
                             <a href="{{ path('planning') }}" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
                         </li>
                         <li>
-                            <a href="#" class="text-decoration-none text-white fs-4 fw-bold">Liste de courses</a>
+                            <a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
                         </li>
                         <li>
-                            <a href="{{ path('foods') }}" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
+                            <a href="#" class="text-decoration-none text-white fs-4 fw-bold">Aliments</a>
                         </li>
                     </ul>
                 </div>
@@ -58,31 +58,54 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center my-3">Liste de courses</h1>
-        <section class="shoppingSection row d-flex justify-content-center">
-            <div class="row mb-3 border-bottom border-warning pb-3">
-                <div class="col-3 text-warning d-flex justify-content-center">Rayon</div>
-                <div class="col-3 text-warning d-flex justify-content-center">Aliment</div>
-                <div class="col-3 text-warning d-flex justify-content-center">Quantité</div>
-                <div class="col-3 text-warning d-flex justify-content-center">Unité</div>
-            </div>
-            {% for food in shoppingArray %}
-                <div class="row">
-                    <div class="col-3 d-flex justify-content-center">
-                        {{ food[0] }}
+        <h1 class="text-center mb-4 title">Aliments</h1>
+        <div class="row row-cols-1 row-cols-lg-2">
+            <section class="col foodsSection">
+                <div class="row border-bottom border-warning pb-3 mb-3">
+                    <div class="col d-flex justify-content-center text-warning">
+                        Aliment
                     </div>
-                    <div class="col-3 d-flex justify-content-center">
-                        {{ food[1] }}
-                    </div>
-                    <div class="col-3 d-flex justify-content-center">
-                        {{ food[2] }}
-                    </div>
-                    <div class="col-3 d-flex justify-content-center">
-                        {{ food[3] }}
+                    <div class="col d-flex justify-content-center text-warning">
+                        Rayon
                     </div>
                 </div>
-            {% endfor %}
-        </section>
+                <div class="foodRowsContainer">
+                    {% for food in foods %}
+                        <div class="row mb-2">
+                            <div class="col d-flex justify-content-center">
+                                {{ food.name }}
+                            </div>
+                            <div class="col d-flex justify-content-center">
+                                {{ food.section }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </section>
+            {# add food form #}
+            <section class="formSection col mt-3">
+
+                {% for message in app.flashes('success') %}
+                    <div id="alertContainer" class="alert alert-success bg-dark border-0 text-center text-success" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+
+                {{ form_start(form) }}
+                
+                {{ form_label(form.name, 'Nom') }}
+                {{ form_widget(form.name) }}
+
+                {{ form_label(form.section, 'Rayon') }}
+                {{ form_widget(form.section) }}
+
+                <p class="text-center mt-3">
+                    <button type="submit" class="btn btn-sm btn-outline-warning">Créer</button>
+                </p>
+
+                {{ form_end(form) }}
+            </section>
+        </div>
     </main>
 {% endblock %}
 
