Update logo and clicking on it now return back to home

--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -59,7 +59,7 @@
     </header>
     <main>
         <h1 class="text-center mb-4 title">Aliments</h1>
-        <div class="row row-cols-1 row-cols-lg-2">
+        <div class="row row-cols-1 row-cols-lg-2 mt-4">
             <section class="col foodsSection">
                 <div class="row border-bottom border-warning pb-3 mb-3">
                     <div class="col d-flex justify-content-center text-warning">
