--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -10,7 +10,7 @@
 {% block body %}
 	<header class="bg-dark">
 		<nav class="row m-0 d-flex align-items-center">
-			<a class="col-2" href="#">
+			<a class="col-2" href="{{ path('home') }}">
 				<img src="images/re7-logo.png" alt="logo" />
 			</a>
 			<div class="col-7 align-items-center desktopNav">
