--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -58,7 +58,7 @@
 		</nav>
 	</header>
 	<main>
-		<section class="row recipesSection">
+		<section class="row recipesSection mt-4">
 			{% for recipe in recipes %}
 				<div class="recipeContainer row fs-3 mb-2">
 					<div class="col-10 recipeNameCol">
