--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -58,7 +58,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center mb-4">Planning</h1>
+        <h1 class="text-center mt-3 mb-4">Planning</h1>
         <section class="planningSection">
             <div class="row mb-3 border-bottom border-warning">
                 <div class="col-3"></div>
