--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -74,7 +74,7 @@
 
 		<section id="addToPlanningSection">
 			<form class="mt-2 mx-auto" method="post">
-				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="mt-5"></input></p>
+				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="mt-5 text-center"></input></p>
 				<div class="d-flex justify-content-around align-items-center">
 					Prévu
 					<select id="day" name="day" required>
