--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -19,7 +19,7 @@ main {
 	display: none;
 }
 
-.recipesSection {
+#recipesSection {
 	max-height: 50vh;
 	overflow-x: scroll;
 }
@@ -33,5 +33,76 @@ select {
 }
 
 #for {
-	width: 30px;
+	width: 35px;
+}
+
+#recipeName {
+	border: none;
+}
+
+@media screen and (min-width: 500px) and (max-width: 999px) {
+	#recipesSection {
+		width: 70vw;
+		margin: auto;
+		max-height: 55vh;
+	}
+
+	#addToPlanningSection {
+		width: 70vw;
+		margin: auto;
+	}
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1399px) {
+	#recipesSection {
+		width: 50vw;
+		margin: auto;
+		max-height: 55vh;
+	}
+
+	#addToPlanningSection {
+		width: 40vw;
+		margin: auto;
+		font-size: 20px;
+	}
+
+	input,
+	select {
+		height: 30px;
+	}
+
+	.recipeNameCol {
+		font-size: 20px;
+	}
+
+	#recipeTitle {
+		margin-top: 20px;
+	}	
+}
+
+@media screen and (min-width: 1400px) {
+	#recipesSection {
+		width: 40vw;
+		margin: auto;
+		max-height: 55vh;
+	}
+
+	#addToPlanningSection {
+		width: 30vw;
+		margin: auto;
+		font-size: 20px;
+	}
+
+	input,
+	select {
+		height: 30px;
+	}
+
+	.recipeNameCol {
+		font-size: 20px;
+	}
+
+	#recipeTitle {
+		margin-top: 20px;
+	}
 }
