--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -20,10 +20,10 @@
                         <a href="{{ path('home') }}" class="text-decoration-none text-warning fs-4 fw-bold">Recettes</a>
                     </li>
                     <li>
-                        <a href="#" class="text-decoration-none text-warning fs-4 fw-bold">Planning</a>
+                        <a href="#" class="text-decoration-none text-white fs-4 fw-bold">Planning</a>
                     </li>
                     <li>
-                        <a href="{{ path('shopping') }}" class="text-decoration-none text-white fs-4 fw-bold">Liste de courses</a>
+                        <a href="{{ path('shopping') }}" class="text-decoration-none text-warning fs-4 fw-bold">Liste de courses</a>
                     </li>
                     <li>
                         <a href="{{ path('foods') }}" class="text-decoration-none text-warning fs-4 fw-bold">Aliments</a>
