--- a/public/css/addRecipe.css
+++ b/public/css/addRecipe.css
@@ -7,8 +7,9 @@ main {
 form {
 	display: flex;
 	flex-direction: column;
-	width: 90vw;
+	width: 80vw;
 	margin: auto;
+	margin-top: 35px;
 }
 
 input,
@@ -33,5 +34,33 @@ li {
 #foodInputsContainer {
 	height: 30vh;
 	overflow-x: scroll;
+}
+
+@media screen and (min-width: 600px) and (max-width: 799px) {
+	form {
+		width: 70vw;
+	}
+}
+
+@media screen and (min-width: 800px) and (max-width: 999px) {
+	form {
+		width: 50vw;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	form {
+		width: 30vw;
+		margin: auto;
+		margin-top: 35px;
+	}
+
+	input,
+	select {
+		height: 30px;
+	}
+	label {
+		font-size: 20px;
+	}
 }
 
