--- a/templates/recipe/recipeDetails.html.twig
+++ b/templates/recipe/recipeDetails.html.twig
@@ -58,7 +58,7 @@
 		</nav>
 	</header>
 	<main>
-		<h2 class="mb-4 text-center">
+		<h2 class="my-4 text-center">
 			{{ recipe.name|capitalize }}
 			<a href="{{ path('update_recipe', { 'id' : recipe.id }) }}">
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill text-warning" viewBox="0 0 16 16">
@@ -66,31 +66,23 @@
 				</svg>
 			</a>
 		</h2>
-		<p class="text-center"><span class="text-warning">Catégorie</span> : {{ recipe.category }}</p>
+		<p class="text-center mb-2 recipeInfo">{{ recipe.category|capitalize }}</p>
 		<div class="row d-flex justify-content-center mb-2">
-			<div class="col-5 d-flex justify-content-around align-items-center">
-				<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-alarm-fill text-warning" viewBox="0 0 16 16">
-					<path d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5zm2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z"/>
-				</svg>
+			<div class="col-4 text-center recipeInfo">
 				{{ recipe.duration }} minutes
 			</div>
 		</div>
 		<div class="row d-flex justify-content-center mb-4">
-			<div class="col-5 d-flex justify-content-around align-items-center">	
-				<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-people-fill text-warning" viewBox="0 0 16 16">
-					<path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-					<path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
-					<path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
-				</svg>
+			<div class="col-4 text-center recipeInfo">	
 				{{ recipe.persons }} personnes
 			</div>
 		</div>
-		<div class="row border-bottom border-warning pb-3 mb-3">
-			<div class="col-5 text-warning d-flex justify-content-center">Aliment</div>
-			<div class="col-2 text-warning d-flex justify-content-center">quantité</div>
-			<div class="col-2 text-warning d-flex justify-content-center">unité</div>
-		</div>
 		<section class="recipeFoodsSection">
+			<div class="row border-bottom border-warning pb-3 mb-3">
+				<div class="col-5 text-warning d-flex justify-content-center">Aliment</div>
+				<div class="col-2 text-warning d-flex justify-content-center">quantité</div>
+				<div class="col-2 text-warning d-flex justify-content-center">unité</div>
+			</div>
 			{% for food in foods %}
 				<div class="row mb-2">
 					<div class="col-5 d-flex justify-content-center">{{ food.foodName }}</div>
