--- a/public/css/updateFoodInRecipe.css
+++ b/public/css/updateFoodInRecipe.css
@@ -8,7 +8,7 @@ main {
 form {
 	display: flex;
 	flex-direction: column;
-	width: 70vw;
+	width: 55vw;
 	margin: auto;
 	margin-top: 40px;
 }
@@ -27,4 +27,57 @@ select {
 	background-color: #212528;
 	border-color: #FFC108;
 	color: white;
+}
+
+@media screen and (min-width: 600px) and (max-width: 799px) {
+	form {
+		width: 45vw;
+	}
+}
+
+@media screen and (min-width: 800px) and (max-width: 999px) {
+	form {
+		width: 35vw;
+	}
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1399px) {
+	form {
+		width: 25vw;
+	}
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1799px) {
+	form {
+		width: 17vw;
+	}
+}
+
+@media screen and (min-width: 1800px) {
+	form {
+		width: 12vw;
+	}
+}
+
+/* all desktop sizes */
+@media screen and (min-width: 1000px) {
+	input,
+	select {
+		height: 30px;
+	}
+
+	input,
+	label,
+	select {
+		font-size: 20px;
+	}
+
+	.updateFoodBtn {
+		font-size: 16px;
+		margin-top: 25px
+	}
+
+	.foodInfo {
+		font-size: 18px;
+	}
 }
