--- a/public/css/updateRecipe.css
+++ b/public/css/updateRecipe.css
@@ -7,7 +7,7 @@ main {
 form {
 	display: flex;
 	flex-direction: column;
-	width: 90vw;
+	width: 70vw;
 	margin: auto;
 }
 
@@ -23,4 +23,53 @@ select {
 label {
 	margin-bottom: 5px;
 	color: white;
+}
+
+@media screen and (min-width: 600px) and (max-width: 799px) {
+	form {
+		width: 60vw;
+	}
+}
+
+@media screen and (min-width: 800px) and (max-width: 999px) {
+	form {
+		width: 50vw;
+	}
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1399px) {
+	form {
+		width: 40vw;
+	}
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1799px) {
+	form {
+		width: 30vw;
+	}
+}
+
+@media screen and (min-width: 1800px) {
+	form {
+		width: 25vw;
+	}
+}
+
+/* all desktop sizes */
+@media screen and (min-width: 1000px) {
+	input,
+	select {
+		height: 30px;
+	}
+
+	input,
+	label,
+	select {
+		font-size: 20px;
+	}
+
+	.updateRecipeBtn {
+		font-size: 18px;
+		margin-top: 25px
+	}
 }
