--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -58,14 +58,13 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center mt-3 mb-4">Planning</h1>
-        <section class="planningSection">
+        <section id="planningSection">
             <div class="row mb-3 border-bottom border-warning">
                 <div class="col-3"></div>
-                <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold fs-6">
+                <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold whenName">
                     Midi
                 </div>
-                <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold fs-6">
+                <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold whenName">
                     Soir
                 </div>
             </div>
