--- a/templates/shopping/index.html.twig
+++ b/templates/shopping/index.html.twig
@@ -58,8 +58,7 @@
         </nav>
     </header>
     <main>
-        <h1 class="text-center my-4">Liste de courses</h1>
-        <section class="shoppingSection row d-flex justify-content-center">
+        <section id="shoppingSection" class="row d-flex justify-content-center mt-5">
             <div class="row mb-3 border-bottom border-warning pb-3">
                 <div class="col-3 text-warning d-flex justify-content-center">Rayon</div>
                 <div class="col-3 text-warning d-flex justify-content-center">Aliment</div>
