--- a/public/css/foods.css
+++ b/public/css/foods.css
@@ -6,15 +6,21 @@ main {
 	overflow: scroll;
 }
 
+.foodsSection {
+	margin: auto;
+}
+
 .foodRowsContainer {
-	height: 35vh;
+	max-height: 35vh;
 	overflow: scroll;
 }
 
 form {
 	display: flex;
 	flex-direction: column;
-	width: 60vw;
+}
+
+.formSection {
 	margin: auto;
 }
 
@@ -33,5 +39,62 @@ label {
 @media screen and (max-width: 1000px) {
 	.title {
 		display: none;
+	}
+}
+
+@media screen and (min-width: 600px) and (max-width: 799px) {
+	.formSection,
+	.foodsSection {
+		width: 60%;
+	}
+}
+
+@media screen and (min-width: 800px) and (max-width: 999px) {
+	.formSection,
+	.foodsSection {
+		width: 50%;
+	}
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1399px) {
+	.formSection,
+	.foodsSection {
+		width: 40%;
+	}
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1799px) {
+	.formSection,
+	.foodsSection {
+		width: 30%;
+	}
+}
+
+@media screen and (min-width: 1800px) {
+	.formSection,
+	.foodsSection {
+		width: 25%;
+	}
+}
+
+/* all desktop sizes */
+@media screen and (min-width: 1000px) {
+	input,
+	select {
+		height: 30px;
+	}
+
+	input,
+	label,
+	select {
+		font-size: 20px;
+	}
+
+	#createFoodBtn {
+		font-size: 20px;
+	}
+
+	.foodRowsContainer {
+		max-height: 70vh;
 	}
 }
