when creating a recipe, add a food with 0 quantity now do nothing

--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -98,7 +98,7 @@
 
 			<div class="col-2 d-flex flex-column align-items-center" id="quantityCol">
 				<span class="text-white mb-2">Quantité</span>
-				<input type="number" min="0" max="100000" id="quantity1" name="quantity1" required>
+				<input type="number" min="0" max="100000" id="quantity1" name="quantity1" value="0" required>
 			</div>
 
 			<div class="col-4 d-flex flex-column align-items-center" id="unitCol">
@@ -113,6 +113,7 @@
 					<option value="poignée">poignée</option>
 				</select>
 			</div>
+			
 		</div>
 		<p class="text-center mt-3">
 			<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" id="addFieldsBtn" class="bi bi-plus-circle-dotted text-warning" viewBox="0 0 16 16">
