We can now filter recipes by category

--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -105,7 +105,7 @@
 				<span class="text-white mb-2">Unité</span>
 				<select id="unit1" name="unit1" required>
 					<option value="kg">kg</option>
-					<option value="g">g</option>
+					<option value="g" selected>g</option>
 					<option value="cl">cl</option>
 					<option value="l">l</option>
 					<option value="pièce">pièce</option>
